--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API SPACEX",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "jest":"^26.4.2",
+    "supertest": "^4.0.2"
   }
 }
