--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "busca-cep": "^0.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "node-viacep": "^1.1.0",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "jest":"^26.4.2",
+    "jest": "^26.4.2",
     "supertest": "^4.0.2"
   }
 }
